Adapted bootstrap layout

--- a/squirrel/app/views/squeeks/_form.html.erb
+++ b/squirrel/app/views/squeeks/_form.html.erb
@@ -1,25 +1,20 @@
-<%= form_for(@squeek) do |f| %>
-  <% if @squeek.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@squeek.errors.count, "error") %> prohibited this squeek from being saved:</h2>
-
-      <ul>
-      <% @squeek.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @squeek, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :user, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :user, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :message, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :message, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :user %><br>
-    <%= f.text_field :user %>
-  </div>
-  <div class="field">
-    <%= f.label :message %><br>
-    <%= f.text_area :message %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                squeeks_path, :class => 'btn' %>
   </div>
 <% end %>
