--- a/squirrel/app/views/squeeks/edit.html.erb
+++ b/squirrel/app/views/squeeks/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing squeek</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @squeek %> |
-<%= link_to 'Back', squeeks_path %>
+<%- model_class = Squeek -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
