--- a/squirrel/app/views/squeeks/show.html.erb
+++ b/squirrel/app/views/squeeks/show.html.erb
@@ -1,14 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Squeek -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>User:</strong>
-  <%= @squeek.user %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:user) %>:</strong></dt>
+  <dd><%= @squeek.user %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:message) %>:</strong></dt>
+  <dd><%= @squeek.message %></dd>
+</dl>
 
-<p>
-  <strong>Message:</strong>
-  <%= @squeek.message %>
-</p>
-
-<%= link_to 'Edit', edit_squeek_path(@squeek) %> |
-<%= link_to 'Back', squeeks_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              squeeks_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_squeek_path(@squeek), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              squeek_path(@squeek),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
