--- a/squirrel/app/views/squeeks/_form.html.erb
+++ b/squirrel/app/views/squeeks/_form.html.erb
@@ -8,7 +8,7 @@
   <div class="control-group">
     <%= f.label :message, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :message, :class => 'text_field' %>
+      <%= f.text_area :message, :class => 'text_field' %>
     </div>
   </div>
 
