--- a/squirrel/app/views/squeeks/index.html.erb
+++ b/squirrel/app/views/squeeks/index.html.erb
@@ -2,37 +2,14 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:user) %></th>
-      <th><%= model_class.human_attribute_name(:message) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @squeeks.each do |squeek| %>
-      <tr>
-        <td><%= link_to squeek.id, squeek_path(squeek) %></td>
-        <td><%= squeek.user %></td>
-        <td><%= squeek.message %></td>
-        <td><%=l squeek.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_squeek_path(squeek), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      squeek_path(squeek),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_squeek_path,
-            :class => 'btn btn-primary' %>
+<%= render :partial => 'form' %>
+
+<div class="content">
+  <% @squeeks.each do |squeek| %>
+    <div class="well">
+      <p><strong><%= squeek.user %></strong> (<%= distance_of_time_in_words(Time.now, squeek.created_at) %> ago).</p>
+      <p><%= squeek.message %></p> 
+    </div>
+  <% end %>
+</div>
